--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
     <application
         android:allowBackup="true"
@@ -14,12 +17,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab5_IOT"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".AsignarTutoria"
+            android:name=".SearchEmployeeActivity"
             android:exported="false" />
         <activity
-            android:name=".DisplayTutor"
+            android:name=".DownloadEmployeeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AsignarTutoriaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DisplayTutorActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
